outputs_20260326-112231-85b57cd7/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity.h:22,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c:1:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G1_001_init_when_GTM_enabled_calls_minimal':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c:43:38: error: implicit declaration of function 'mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_getCallCount'; did you mean 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_getCallCount'? [-Wimplicit-function-declaration]
   43 |     TEST_ASSERT_EQUAL_INT_MESSAGE(0, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_getCallCount(), "No runtime dead-time update expected during init");
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:897:156: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_INT'
  897 | #define UNITY_TEST_ASSERT_EQUAL_INT(expected, actual, line, message)                             UnityAssertEqualNumber((UNITY_INT)(expected), (UNITY_INT)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_INT)
      |                                                                                                                                                            ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c:43:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_INT_MESSAGE'
   43 |     TEST_ASSERT_EQUAL_INT_MESSAGE(0, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_getCallCount(), "No runtime dead-time update expected during init");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G1_002_init_when_GTM_disabled_enables_and_configures_clocks':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c:50:5: error: 'mock_IfxGtm_Cmu_getModuleFrequency_returnValue' undeclared (first use in this function); did you mean 'mock_IfxGtm_Cmu_getModuleFrequency_getCallCount'?
   50 |     mock_IfxGtm_Cmu_getModuleFrequency_returnValue = UT_GTM_ASSUMED_FXCLK_HZ; /* Provide a valid FXCLK */
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     mock_IfxGtm_Cmu_getModuleFrequency_getCallCount
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G5_002_update_after_init_disabled_path_clock_guard_executed':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_zh1b10un\test\test_gtm_tom_3_phase_inverter_pwm.c:186:5: error: 'mock_IfxGtm_Cmu_getModuleFrequency_returnValue' undeclared (first use in this function); did you mean 'mock_IfxGtm_Cmu_getModuleFrequency_getCallCount'?
  186 |     mock_IfxGtm_Cmu_getModuleFrequency_returnValue = UT_GTM_ASSUMED_FXCLK_HZ;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     mock_IfxGtm_Cmu_getModuleFrequency_getCallCount
